home hero fix on smaller desktop

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6241,3 +6241,13 @@ textarea {
     }
 
 }
+
+@media screen and ( max-height: 900px ) and ( min-width: 1250px ) {
+	.home-hero-content h1 {
+		font-size: 5rem;
+		line-height: 6rem;
+		font-size: 4rem;
+		line-height: 5rem;
+		margin: 0;
+		}
+}
